<resources>

    <!-- activity_main -->
    <string name="app_name">CopsCivilsLicense</string>
    <string name="first_page">Cops And Civils</string>
    <string name="vCivil">Civil</string>
    <string name="vCop">Cop</string>

    <!-- dialog_log -->
    <string name="vTextOr">Or</string>
    <string name="forgot_pass">Forgot Pass?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- register_log -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender_sex">Gender</string>
    <string name="blood_type">Blood Type</string>
    <string name="close_one">Close One Name</string>
    <string name="close_one_number">Close One Number</string>
    <string name="register">Register</string>
    <string name="Inregistration">Registration</string>
    <string name="auth_btn_text_login">Login</string>
    <string name="auth_btn_text_register">Register</string>
    <string name="auth_btn_reset_password">Reset password</string>
    <string name="auth_btn_log_out">Log out</string>

    <string-array name="spinner_blood_stringArray">
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <string-array name="spinner_sex_array">
        <item>F</item>
        <item>M</item>
    </string-array>

    <string-array name="array_for_firebase_data">
        <item>bloodType</item>
        <item>closeOneName</item>
        <item>closeOneNumber</item>
        <item>firstName</item>
        <item>gender</item>
        <item>gpscoordonates</item>
        <item>lastName</item>
        <item>password</item>
    </string-array>

    <!-- Service_log -->
    <string name="title_name">Protection</string>
    <string name="ticker_name">Ticker</string>
    <string name="content_text">Page Alert</string>
    <string name="auth_page_login_register">You don\'t have an account? Sign up</string>
    <string name="auth_page_login_remember">I forgot my password</string>
    <string name="auth_page_register_login">I already have an account</string>
    <string name="password_too_short_error">Password must have minimum 6 characters</string>
    <string name="name_empty_error">Please insert your name</string>
    <string name="email_empty_error">Please insert a valid email</string>
    <string name="generic_error_message">An error occurred</string>
    <string name="auth_error_invalid_credentials">Invalid credentials</string>
    <string name="auth_password_reset_change">An email with a password reset has been sent. Please change your password and login again.</string>

    <!-- Dialog  Cop -->
    <string name="dialog_cop_accept">Misiune: Civil in pericol!</string>
    <string name="dialog_cop">CIVIL IN PERICOL</string>

    <!-- Dialog Civil -->
    <string name="dialog_civil_notification">Un echipaj se află în drum spre tine</string>
    <string name="dialog_civil_ok">Super!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
