<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heroalex.copscivilslicense.MainActivity"
    android:contentDescription="@string/app_name"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/civilButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vCivil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vTextOr"/>

    <Button
        android:id="@+id/copButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vCop"/>


</LinearLayout>