<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.heroalex.copscivilslicense.fragments.LoginFragment">

    <ImageView
        android:id="@+id/icon_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_account_circle_black_48dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_sing_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/input_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/auth_btn_text_login"
        style="@style/BasicButton"/>

    <TextView
        android:id="@+id/btn_text_forgot_password"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/auth_page_login_remember"
        style="@style/SimpleTextView"/>

    <TextView
        android:id="@+id/btn_text_register"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/auth_page_login_register"
        style="@style/SimpleTextView"/>

</LinearLayout>
