<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"

    android:layout_marginBottom="15dp"
    android:layout_marginTop="15dp">

    <ImageView
        android:id="@+id/icon_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_account_circle_black_48dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <AutoCompleteTextView
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_log_in"
        style="@style/BasicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"/>

    <TextView
        android:id="@+id/text_forgot_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_pass"
        android:textColor="@color/colorPrimaryDark"

        />

    <TextView
        android:id="@+id/text_spec_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="Don't have an account? Register here"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>